# aruaru-llm

./: .gitignore  CLAUDE.md  Cargo.toml  PORTING.md  README-English.md  README.md  install.ps1  install.sh
.github/workflows/: release.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/tokyo/runo/aruarullm/: MainActivity.kt  PowerProfile.kt  ProfileSelectActivity.kt
android/app/src/main/res/drawable/: ic_launcher_alwayson.xml  ic_launcher_normal.xml  ic_launcher_powersave.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/layout-sw600dp/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
src/: main.rs  scoring.rs  security.rs  tenants.rs
