[package]
name = "aruaru-llm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aruaru-llm"
path = "src/main.rs"

[dependencies]
poem = "3.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
# open-cudaのCPUバックエンドをpath依存として使う(SET構成、CLAUDE.md参照)。
# デフォルトfeature(winfsp_backend/gpu_accel)を持たないため、WinFsp SDK/dxc
# 等は不要——rayon+anyhow+thiserror+tracingのみの軽量な依存グラフ。
opencuda-core = { path = "../open-cuda/crates/opencuda-core" }
opencuda-cpu = { path = "../open-cuda/crates/opencuda-cpu" }
opencuda-blas = { path = "../open-cuda/crates/opencuda-blas" }
# multilingual-e5-small(MIT)による実際の文埋め込み+コサイン類似度で意図分類する
# (旧: 固定語彙bag-of-words、2026-07-21移行、CLAUDE.md参照)。
opencuda-bert = { path = "../open-cuda/crates/opencuda-bert" }
